--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 	<!-- header部分 -->
 	<div class="header-wrapper">
 		<div class="container-wrapper cl">
-			<a href="/index.html" class="logo navbar-title mr-20 fl-l">logo</a>
+			<a href="./index.html" class="logo navbar-title mr-20 fl-l">logo</a>
 			<a class="logo navbar-title mr-20 fl-l">admin</a>
 			<div class="user-wrapper fl-r">
 				<div class="dropdown">
@@ -38,7 +38,29 @@
 
 	<!-- 侧边栏 -->
 	<div class="aside-wrapper">
-		
+		<div class="aside-menu">
+			<dl>
+				<dt>资讯管理<i class="glyphicon glyphicon-menu-down menu-dropdown-arrow"></i></dt>
+				<dd>
+					<ul>
+						<li><a href="javascript:;">体育新闻</a></li>
+						<li><a href="javascript:;">财经新闻</a></li>
+						<li><a href="javascript:;">娱乐新闻</a></li>
+					</ul>
+				</dd>
+			</dl>
+
+			<dl>
+				<dt>会员管理<i class="glyphicon glyphicon-menu-down menu-dropdown-arrow"></i></dt>
+				<dd>
+					<ul>
+						<li><a href="javascript:;">会员列表</a></li>
+						<li><a href="javascript:;">等级管理</a></li>
+						<li><a href="javascript:;">充值中心</a></li>
+					</ul>
+				</dd>
+			</dl>
+		</div>
 	</div>
 
 
