--- a/assets/css/zh-adminUI.css
+++ b/assets/css/zh-adminUI.css
@@ -85,7 +85,23 @@ a:active {
 	border-bottom: 1px solid #e5e5e5;
 	color: #333;
 }
-.menu-dropdown-arrow {
+.aside-menu>dl>dt>.menu-dropdown-arrow {
+	position: absolute;
+	top: 8px;
+	right: 15px;
+	transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+}
+.aside-menu>dl>dt.selected>.menu-dropdown-arrow {
+	transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+}
+.aside-menu .menu-dropdown-arrow {
 	position: absolute;
 	top: 8px;
 	right: 15px;
