--- a/views/index.html
+++ b/views/index.html
@@ -66,5 +66,7 @@
 
 	<script type="text/javascript" src="../lib/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="../lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../assets/js/zh-adminUI.js"></script>
+	<script type="text/javascript" src="../assets/js/home.js"></script>
 </body>
 </html>
